package com.codecool.mi6;

public class App {
    public static void main(String[] args) {
        System.out.println("Hello");
    }
}
