@startuml

title __SECRET-AGENT-UML's Class Diagram__\n

  namespace com.codecool.mi6 {
    class com.codecool.mi6.App {
    }
  }
  

  namespace com.codecool.mi6 {
    namespace models {
      class com.codecool.mi6.models.Credential {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace models {
      class com.codecool.mi6.models.Mission {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace models {
      enum SecurityLevel {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace services {
      interface com.codecool.mi6.services.AlertService {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace services {
      class com.codecool.mi6.services.ConsoleAlertService {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace services {
      class com.codecool.mi6.services.LoginService {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace services {
      class com.codecool.mi6.services.MissionService {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace stores {
      interface com.codecool.mi6.stores.CredentialStore {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace stores {
      class com.codecool.mi6.stores.InMemoryCredentialStore {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace stores {
      class com.codecool.mi6.stores.InMemoryMissionStore {
      }
    }
  }
  

  namespace com.codecool.mi6 {
    namespace stores {
      interface com.codecool.mi6.stores.MissionStore {
      }
    }
  }
  

  com.codecool.mi6.App o-- com.codecool.mi6.services.LoginService : loginService
  com.codecool.mi6.App o-- com.codecool.mi6.services.MissionService : missionService
  com.codecool.mi6.models.Credential o-- com.codecool.mi6.models.SecurityLevel : level
  com.codecool.mi6.models.Mission o-- com.codecool.mi6.models.SecurityLevel : access
  com.codecool.mi6.services.ConsoleAlertService .up.|> com.codecool.mi6.services.AlertService
  com.codecool.mi6.services.LoginService o-- com.codecool.mi6.services.AlertService : alertService
  com.codecool.mi6.services.LoginService o-- com.codecool.mi6.stores.CredentialStore : credentials
  com.codecool.mi6.services.MissionService o-- com.codecool.mi6.services.AlertService : alertService
  com.codecool.mi6.services.MissionService o-- com.codecool.mi6.stores.MissionStore : missionStore
  com.codecool.mi6.stores.InMemoryCredentialStore .up.|> com.codecool.mi6.stores.CredentialStore
  com.codecool.mi6.stores.InMemoryMissionStore .up.|> com.codecool.mi6.stores.MissionStore


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
